--- a/src/app/team-player-component/team-player.component.html
+++ b/src/app/team-player-component/team-player.component.html
@@ -1,14 +1,11 @@
-<div class="team-player-container">
+<div *ngIf="player"
+     class="team-player-container">
   <span class="team-player-name">
-    {{ name }}
+    {{ player.name }}
   </span>
-  <div class="rating-container">
-    <mat-icon 
-      class="rating-button"
-      *ngFor="let ratingId of ratingArr; index as i"
-      [id]="'star_' + i"
-      (click)="rating = i + 1">
-      {{ showIcon(i) }}
-    </mat-icon>
-  </div>
+
+  <mat-chip>
+    <mat-icon matChipAvatar>star</mat-icon>
+    <span>{{ player.rating }}</span>
+  </mat-chip>
 </div>
