--- a/src/app/team-player-component/team-player.component.scss
+++ b/src/app/team-player-component/team-player.component.scss
@@ -7,15 +7,5 @@
 }
 
 .team-player-name {
-  width: 80px;
-}
-
-.rating-container {
-  width: 150px;
-}
-
-.rating-button {
-  cursor: pointer;
-  width: 30px;
-  height: 30px;
+  width: 100%;
 }
