--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,10 @@
-app-team-player {
-  width: 100%;
+app-change-player {
+  margin: 10px;
 }
 
-.fields-wrapper {
-  margin: 10px;
+.view-content {
+  max-height: 100%;
+  overflow: auto;
 }
 
 .cdk-drag-preview {
@@ -11,61 +12,6 @@ app-team-player {
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
     0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-
-.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.free-drag-box {
-  width: 100px;
-  height: 30px;
-  border: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-  cursor: move;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-size: small;
-  background: #fff;
-  border-radius: 4px;
-  margin-right: 25px;
-  position: relative;
-  z-index: 1;
-  box-sizing: border-box;
-  padding: 10px;
-  transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-    0 1px 5px 0 rgba(0, 0, 0, 0.12);
-}
-
-.free-drag-box:active {
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-  z-index: 2;
-}
-
-.field-boundary-1 {
-  width: 400px;
-  height: 300px;
-  max-width: 100%;
-  background: url('../../assets/field-background-1.jpg');
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.field-boundary-2 {
-  width: 400px;
-  height: 300px;
-  max-width: 100%;
-  background: url('../../assets/field-background-2.jpg');
-  background-repeat: no-repeat;
-  background-size: contain;
 }
 
 mat-drawer-container {
@@ -89,4 +35,12 @@ mat-drawer-container {
 
 .header-menu-item {
   margin-left: 5px;
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
