--- a/src/app/team-list/team-list.component.scss
+++ b/src/app/team-list/team-list.component.scss
@@ -1,3 +1,7 @@
+app-team-player {
+  width: 100%;
+}
+
 .team-title {
   align-items: center;
   display: flex;
@@ -43,8 +47,4 @@
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
   0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.cdk-drag-placeholder {
-  opacity: 0;
 }
